# sweetube

./: .gitignore  Makefile  README.md  cli.py  pyproject.toml  run.py  run.sh  server.py
chrome/: .eslintcache  background.js  fetch.js  manifest.json  package.json
chrome/config/: webpack.config.js
chrome/public/: manifest.json
chrome/src/: App.js  background.js  index.js  sweetube.js
chrome/src/sweetube/: fetch.js  sweetube.js
src/detection/: detector.py
src/transcript/: __init__.py
sweetube/: __init__.py
sweetube/chunk/: __init__.py  base.py
sweetube/cli/: cli.py  output.py
sweetube/evaluation/: evaluate.py  transcript_evaluation.csv
sweetube/runner/: runner.py
sweetube/runner/cli/: cli.py  output.py
sweetube/runner/server/: server.py
sweetube/transcript/: __init__.py  transcriptor.py
temp/: contentScript.js  fetch.js  manifest.json
