[tool.poetry]
name = "sweetube"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.7"
youtube_transcript_api = "^0.3.1"
hatesonar = "^0.0.7"
click = "^7.1.2"
tqdm = "^4.51.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
